fix(switch): reduce letter-spacing on v4 badge

--- a/src/components/section-switch/section-switch.scss
+++ b/src/components/section-switch/section-switch.scss
@@ -112,6 +112,7 @@
   background: #3252f5;
   color: #71c5ff;
   height: auto;
+  letter-spacing: 0.01em;
   padding: 1px 5px;
   font-size: 10px;
   margin-left: 13px;
